# tracking-grants

./: .env.example  .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
data/raw/: NFRP.xlsx  PCRP.xlsx  PRORP.csv  PRORP.xlsx  TSCRP.xlsx
data/raw/awards/: NFRP_awards.csv  PCRP_awards.csv  PRORP_awards.csv  TSCRP_awards.csv
data/raw/publications/: NFRP.csv  PCRP.csv  PRORP.csv  TSCRP.csv
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/exploratory/: 0_preprocessing.ipynb  1_match_articles.ipynb  2_crossref.ipynb  3_apis.ipynb  clinicaltrials.ipynb  crossref.ipynb  initial_exploration.ipynb  refactoring.ipynb  sandbox.ipynb
notebooks/presentation/: dois_23072020.csv  report_1.ipynb  report_1.slides.html
notebooks/presentation_2/: articles_citations.csv  articles_news.csv  articles_news_media.csv  articles_twitter.csv  grants_citations.csv  grants_citations_per_$.csv  grants_news.csv  grants_news_media.csv  grants_news_per_$.csv  grants_twitter.csv  grants_twitter_per_$.csv  report_2.ipynb
notebooks/reports/: interim_report_1.ipynb  interim_report_2.ipynb  interim_report_3.ipynb  report_1.ipynb
notebooks/templates/: results.ipynb
results/slides/: report_1.slides.html
src/data/: process_crossref.py  process_excel.py  process_references.py  query_ids.py  query_ncbi.py
src/military_grants/: __init__.py  __main__.py
src/military_grants/0_preprocessing/: main.py
src/military_grants/1_process_references/: main.py  write_articles.py
src/military_grants/2_process_articles/: main.py
src/military_grants/3_enrich_articles/: process_metrics.py
src/military_grants/collect_metrics/: altmetrics.py  main.py  process_metrics.py  wos.py
src/military_grants/preprocessing/: main.py  merge_excel_files.py  preprocessing.py  run.py
src/military_grants/process_articles/: main.py  query_pmids.py
src/military_grants/process_references/: export_references.py  main.py  match_dois.py  write_articles.py
src/military_grants/queries/: apis.py  process_altmetric.py  query_altmetric.py  query_crossref.py  query_ncbi.py
src/military_grants/reports/: main.py
src/tracking_grants/: __init__.py  __main__.py
src/tracking_grants/0_preprocessing/: main.py  merge_excel_files.py  process_input_files.py
src/tracking_grants/1_match_references/: main.py  process_matches.py  run_matcher.py
src/tracking_grants/1_process_references/: export_references.py  main.py  match_dois.py  write_articles.py
src/tracking_grants/2_process_articles/: crossref_metadata.py  limited_as_completed.py  main.py  query_pmids.py
src/tracking_grants/3_enrich_articles/: altmetrics.py  crossref_metadata.py  main.py  process_metrics.py
src/tracking_grants/4_reports/: main.py
src/tracking_grants/utils/: helpers.py  logging.py
src/utils/: apis.py  mylogger.py
