[tool.poetry]
name = "tracking-grants"
version = "0.1.0"
description = ""
authors = ["Asura Enkhbayar <asura.enkhbayar@gmail.com>"]
packages = [
    { include = "tracking_grants",  from = "src"},
]

[tool.poetry.dependencies]
python = "^3.6.10"
pandas = "^1.0.1"
python-dotenv = "^0.12.0"
tqdm = "^4.43.0"
click = "^7.0"
xlrd = "^1.2.0"
requests = "^2.23.0"
pyaltmetric = "^0.2.0"
matplotlib = "^3.2.0"
seaborn = "^0.10.0"
ratelimit = "^2.2.1"
matplotlib-venn = "^0.11.5"
habanero = "^0.7.4"
requests-futures = "^1.0.0"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
throttler = "^1.1.3"
aiorun = "^2020.6.1"
supervenn = "^0.2.1"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
Sphinx = "^2.4.3"
coverage = "^5.0.3"
ipykernel = "^5.1.4"
ipywidgets = "^7.5.1"

[tool.poetry.scripts]
all = "tracking_grants.__main__:run"

preprocessing = "tracking_grants.0_preprocessing.main:run_all"
references = "tracking_grants.1_match_references.main:run_all"
articles = "tracking_grants.2_process_articles.main:run_all"
metrics = "tracking_grants.3_apis.main:run_all"
reports = "tracking_grants.4_reports.main:run_all"

cr_metadata = "tracking_grants.3_apis.crossref_metadata:run"
altmetrics = "tracking_grants.3_enrich_articles.altmetrics:run"
unpaywall = "tracking_grants.3_apis.unpaywall:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
